# trekr

./: CMakeLists.txt  LICENSE  README.md
environment/configuration/: requirements.txt
source/app/: README.md  pyproject.toml
source/app/src/: main.py
source/flet/trekr/: README.md
source/package/trekr/: __init__.py
source/package/trekr/control/: dataset_drawer.py  dataset_plot.py  dataset_table.py
source/package/trekr/flet/: app.py  dataset_drawer.py  dataset_plot.py  dataset_row.py  dataset_table.py  dataset_tabs.py
source/package/trekr/io/: __init__.py  database.py  dataset.py
source/test/: CMakeLists.txt
source/test/trekr_test/io/: database_test.py  dataset_test.py
